Add reverse project search for a given database/AnalysisID combination. /analysiscategory/db/id/projects/ will give back a list with links to coresponding projects
